--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,11 +7,15 @@
   padding: 0;
   margin: 0;
 }
+body {
+  background-color: #F3F3F3;
+}
 
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 
 
