--- a/scss/partials/_display-current-weather.scss
+++ b/scss/partials/_display-current-weather.scss
@@ -1,40 +1,70 @@
 .weather {
-  border: 1px solid red;
+  border-left: 4px solid purple;
+  border-right: 4px solid purple;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 90vw;
   height: 50vh;
+  background-color: white;
+  border-radius: 5%;
+  -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.6);
+  -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.6);
+  box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.6);
+}
+
+.weather-row-left, .weather-row-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .weather-row-left {
   width: 40%;
+  height: 100%;
+  margin: auto;
 }
 
 .weather-row-right {
   width: 60%;
+  height: 100%;
+  border-left: 1px dotted purple;
 }
 
 .weather-row-left-list, .weather-row-right-list {
   list-style: none;
   width: 100%;
-}
-
-.weather-row-left-list {
+  height: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
 
+.weather-row-right-list {
+  padding: 0 5%;
 }
 
 .weather-row-left-list-element {
-  padding: 5px 0;
+  padding: 1vh 0;
 }
 
 .weather-row-right-list-element {
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 5px 0;
+  padding: 1vh 0;
 }
 
+.weather-icon {
+  background-size: cover;
+  background-position: center;
+  height: 20vh;
+  width: 30vw;
+  max-height: 200px;
+  max-width: 200px;
+}
+
+.weather-temp {
+  font-size: 1.6rem;
+}
 
