--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,10 @@
+@import 'utilities/_named-variables.scss';
 @import 'partials/_navigation-bar.scss';
 @import 'partials/_location-input';
 @import 'partials/_display-current-weather.scss';
+@import 'partials/_header.scss';
+
+
 
 * {
   box-sizing: border-box;
@@ -8,7 +12,7 @@
   margin: 0;
 }
 body {
-  background-color: #F3F3F3;
+  background-color: $mainBackgroundColor;
 }
 
 main {
