Basic forecast styling

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import 'partials/_location-input';
 @import 'partials/_display-current-weather.scss';
 @import 'partials/_header.scss';
+@import 'partials/_display-forecast.scss';
 
 
 
