Additional forecast styling

--- a/scss/partials/_display-forecast.scss
+++ b/scss/partials/_display-forecast.scss
@@ -18,12 +18,17 @@
   height: 60px;
   display: flex;
   flex-direction: row;
+  background-color: white;
+  margin: 3px 0;
+  border-left: 2px solid $maincolor;
+  border-right: 2px solid $maincolor;
+  align-items: center;
 }
 
 .forecast-list-element-hour {
-  border-left: 2px solid $maincolor;
-  height: 100%;
   width: 13vw;
+  height: 1rem;
+  margin-left: 5px;
 }
 
 .forecast-list-icon {
@@ -35,23 +40,40 @@
 
 .forecast-main {
   height: 100%;
-  width: 27vw;
+  width: 30vw;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+}
+
+.forecast-main-temp {
+  font-size: 1.6rem;
+  text-align: center;
+}
+
+.forecast-deg-celsius {
+  font-size: 1.4rem;
+}
+
+.forecast-main-desc {
+  font-size: 0.8rem;
+  text-align: center;
 }
 
 .forecast-list-secondary {
   list-style: none;
   height: 100%;
-  width: 45vw;
+  width: 42vw;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  margin-right: 5px;
 }
 
 .forecast-list-secondary-element {
   width: 100%;
-  height: 33.333%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  font-size: 0.6rem;
 }
