--- a/scss/partials/_location-input.scss
+++ b/scss/partials/_location-input.scss
@@ -21,6 +21,7 @@
   font-size: 20px;
   margin: 0 5px;
   text-indent: 10px;
+  letter-spacing: 1px;
   border: none;
   border-left: 2px solid $maincolor;
   &::placeholder {
