--- a/scss/partials/_display-forecast.scss
+++ b/scss/partials/_display-forecast.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   list-style: none;
-  margin: 0 5px;
+  padding: 0 10px;
 }
 
 .forecast-list-element {
