--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import 'partials/_display-current-weather.scss';
 @import 'partials/_header.scss';
 @import 'partials/_display-forecast.scss';
+@import 'partials/_display-pollution.scss';
 
 
 
