Pollution styling, new font

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,7 +12,9 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Encode Sans Condensed', sans-serif;
 }
+
 body {
   background-color: $mainBackgroundColor;
 }
