--- a/scss/partials/_display-current-weather.scss
+++ b/scss/partials/_display-current-weather.scss
@@ -1,15 +1,12 @@
 .weather {
-  border-top: 2px solid purple;
-  border-bottom: 2px solid purple;
+  border-left: 2px solid purple;
+  border-right: 2px solid purple;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 95vw;
   height: 50vh;
   background-color: white;
-  //-webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.6);
-  //-moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.6);
-  //box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.6);
 }
 
 .weather-row-left, .weather-row-right {
@@ -27,7 +24,6 @@
 .weather-row-right {
   width: 60%;
   height: 100%;
-  border-left: 2px solid $maincolor;
 }
 
 .weather-row-left-list, .weather-row-right-list {
