--- a/scss/partials/_display-pollution.scss
+++ b/scss/partials/_display-pollution.scss
@@ -1,3 +1,5 @@
+
+
 .pollution-container {
   height: 50vh;
   width: 95vw;
@@ -12,7 +14,10 @@
 .airly-logo {
   width: 100%;
   height: 25%;
-  background-image: url("https://airly.eu/wp-content/themes/draftweb/images/presskit/big/logo1.jpg");
+  //background-image: url("https://airly.eu/wp-content/themes/draftweb/images/presskit/big/logo1.jpg");
+  background-image: url("./../images/airly.jpg");
+  //background-image: url("./../images/geo.svg");
+
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
