--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,7 @@
 html {
   background-color: #F5F5F5;
 }
+
 body {
   background-color: $mainBackgroundColor;
   position: relative;
@@ -31,6 +32,17 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.headerNavigationContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  @media (min-width: 1000px) {
+    flex-direction: row;
+    margin-bottom: 20px;
+  }
 }
 
 .no-data {
