--- a/scss/partials/_location-input.scss
+++ b/scss/partials/_location-input.scss
@@ -1,8 +1,12 @@
 .location-container {
-  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  @media (min-width: 1000px) {
+    width: 60%;
+    background-color: white;
+  }
 }
 
 .location-input {
@@ -13,6 +17,9 @@
   justify-content: center;
   align-items: center;
   margin: 20px 0;
+  @media (min-width: 1000px) {
+    margin: 10px;
+  }
 }
 
 .location-input-form {
