--- a/scss/partials/_navigation-bar.scss
+++ b/scss/partials/_navigation-bar.scss
@@ -4,6 +4,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  @media (min-width: 1000px) {
+    width: 40%;
+    margin-right: auto;
+  }
 }
 
 .navigation-bar {
@@ -15,6 +19,9 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  @media (min-width: 1000px) {
+    height: 70px;
+  }
 }
 
 .navigation-bar-element {
@@ -37,4 +44,7 @@
   padding-top: 20px;
   display: block;
   text-align: center;
+  @media (min-width: 1000px) {
+    padding-top: 25px;
+  }
 }
