Desktop styling: - added surrounding weather component for width > 1000px

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import 'partials/_display-forecast.scss';
 @import 'partials/_display-pollution.scss';
 @import 'partials/_footer.scss';
+@import 'partials/_display-surrounding-weather.scss';
 
 * {
   box-sizing: border-box;
@@ -32,6 +33,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 90vh;
 }
 
 .headerNavigationContainer {
