--- a/scss/partials/_display-current-weather.scss
+++ b/scss/partials/_display-current-weather.scss
@@ -1,3 +1,13 @@
+.weather-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  justify-items: center;
+  align-content: center;
+  align-items: center;
+}
+
 .weather {
   border-left: 2px solid purple;
   border-right: 2px solid purple;
@@ -9,6 +19,11 @@
   width: 95%;
   height: 60vh;
   background-color: white;
+  @media (min-width: 1000px) {
+    width: 45%;
+    margin-left: 20px;
+    margin-right: auto;
+  }
 }
 
 .weather-row-left, .weather-row-right {
@@ -16,7 +31,6 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
-
 }
 
 .weather-row-left {
