--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,7 +33,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 90vh;
+  //height: 90vh;
 }
 
 .headerNavigationContainer {
