--- a/scss/partials/_display-current-weather.scss
+++ b/scss/partials/_display-current-weather.scss
@@ -12,8 +12,8 @@
   border-left: 2px solid purple;
   border-right: 2px solid purple;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   align-content: center;
   align-items: center;
   width: 95%;
@@ -21,8 +21,26 @@
   background-color: white;
   @media (min-width: 1000px) {
     width: 45%;
-    margin-left: 20px;
     margin-right: auto;
+  }
+}
+
+.weather-header {
+  display: none;
+  @media (min-width: 1000px) {
+    display: block;
+    font-size: 1.5rem;
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.weather-rows {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  @media (min-width: 1000px) {
+    height: 80%;
   }
 }
 
@@ -62,6 +80,10 @@
   display: flex;
   justify-content: space-between;
   padding: 1vh 0;
+}
+
+.weather-name {
+  font-size: 1.5rem;
 }
 
 .weather-icon {
