--- a/scss/partials/_display-pollution.scss
+++ b/scss/partials/_display-pollution.scss
@@ -1,20 +1,35 @@
-
-
 .pollution-container {
-  height: 50vh;
   width: 95%;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.airly-container, .aqi-container {
+  height: 45vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: white;
   border-left: 2px solid $maincolor;
   border-right: 2px solid $maincolor;
+  margin-bottom: 20px;
 }
 
 .airly-logo {
   width: 100%;
   height: 25%;
   background-image: url("./../images/airly.jpg");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.aqi-logo {
+  background-image: url("./../images/aqicnxl.png");
+  width: 100%;
+  height: 25%;
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
