--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import 'partials/_display-forecast.scss';
 @import 'partials/_display-pollution.scss';
 @import 'partials/_footer.scss';
+@import 'partials/_displayNightNextDay.scss';
 
 * {
   box-sizing: border-box;
