--- a/scss/partials/_display-current-weather.scss
+++ b/scss/partials/_display-current-weather.scss
@@ -3,9 +3,10 @@
   width: 100%;
   height: 100%;
   justify-content: center;
-  justify-items: center;
-  align-content: center;
   align-items: center;
+  @media (min-width: 1000px) {
+    height: 75vh;
+  }
 }
 
 .weather {
@@ -20,6 +21,7 @@
   height: 60vh;
   background-color: white;
   @media (min-width: 1000px) {
+    height: 100%;
     width: 45%;
     margin-right: auto;
   }
@@ -31,7 +33,8 @@
     display: block;
     font-size: 1.5rem;
     margin: 0;
-    padding: 0;
+    padding: 10px;
+    font-weight: 500;
   }
 }
 
@@ -80,6 +83,9 @@
   display: flex;
   justify-content: space-between;
   padding: 1vh 0;
+  @media (min-width: 1000px) {
+    padding: 10px;
+  }
 }
 
 .weather-name {
