--- a/scss/partials/_display-forecast.scss
+++ b/scss/partials/_display-forecast.scss
@@ -4,6 +4,8 @@
   justify-content: center;
   @media (min-width: 1000px) {
     width: 100%;
+    height: 80vh;
+    align-items: center;
   }
 }
 
@@ -14,7 +16,8 @@
   list-style: none;
   @media (min-width: 1000px) {
     flex-direction: row;
-    overflow: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
   }
 }
 
@@ -116,4 +119,17 @@
     margin: 5px 0;
     font-size: 0.8rem;
   }
+}
+
+::-webkit-scrollbar {
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3);
+  background-color: white;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $maincolor;
 }
