--- a/scss/partials/_display-forecast.scss
+++ b/scss/partials/_display-forecast.scss
@@ -33,7 +33,7 @@
   align-items: center;
   @media (min-width: 1000px) {
     height: 70vh;
-    width: 140px;
+    width: 150px;
     margin: 10px 4px;
     flex-direction: column;
   }
@@ -44,6 +44,11 @@
   height: 2.2rem;
   margin-left: 5px;
   text-align: center;
+  @media (min-width: 1000px) {
+    margin: 10px 0;
+    width: 150px;
+    height: 50px;
+  }
 }
 
 .forecast-element-time-hour {
@@ -68,9 +73,10 @@
   background-repeat: no-repeat;
   background-position: center;
   @media (min-width: 1000px) {
-    width: 100px;
-    margin-top: 10px;
-    background-size: contain;
+    height: 200px;
+    width: 100%;
+    margin-top: 30px;
+    background-size: cover;
   }
 }
 
@@ -80,6 +86,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  @media (min-width: 1000px) {
+    width: 100%;
+    height: 200px;
+  }
 }
 
 .forecast-main-temp {
@@ -94,6 +104,9 @@
 .forecast-main-desc {
   font-size: 0.8rem;
   text-align: center;
+  @media (min-width: 1000px) {
+    font-size: 1rem;
+  }
 }
 
 .forecast-list-secondary {
@@ -105,7 +118,9 @@
   justify-content: space-around;
   margin-right: 5px;
   @media (min-width: 1000px) {
-    width: 80%;
+    width: 100%;
+    justify-content: center;
+
   }
 }
 
@@ -116,8 +131,9 @@
   justify-content: space-between;
   font-size: 0.6rem;
   @media (min-width: 1000px) {
-    margin: 5px 0;
-    font-size: 0.8rem;
+    margin: 15px 0;
+    padding: 0 10px;
+    font-size: 1rem;
   }
 }
 
